<resources>
    <string name="app_name">FootGear</string>
    <string name="login">Login</string>
    <string name="please_sign_in_to_continue">Please login to continue</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="dont_have_an_account">Don\'t have an account? <font color='#4caf50'><b>Sign up</b></font></string>
    <string name="password_error_string">Password field cannot be empty</string>
    <string name="error_string">Field cannot be empty</string>
    <string name="error_number_string">Field cannot be equal to 0</string>
    <string name="email_error_empty">Email field cannot be empty</string>
    <string name="email_error_invalid">Email is invalid</string>
    <string name="email_address_error">Please enter valid email address!</string>
    <string name="welcome">Welcome</string>
    <string name="instructions">Instructions</string>
    <string name="the_only_place_to_find_great_sneakers">The only place to find great sneakers</string>
    <string name="next">Next</string>
    <string name="let_s_get_started">Let\'s get started</string>
    <string name="size">Size %1$d</string>
    <string name="hint_brand">Brand name</string>
    <string name="hint_name">Shoe name</string>
    <string name="hint_size">Size</string>
    <string name="hint_description">Description</string>
    <string name="add_shoe">Add Shoe</string>
    <string name="logout">Logout</string>
    <string name="select_new_shoes_to_the_inventory">Select + new shoes to the inventory</string>
    <string name="view_item_added">View Item added</string>
</resources>