<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/get_started_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:text="@string/let_s_get_started"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView4"
            style="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="32dp"
            android:text="@string/the_only_place_to_find_great_sneakers"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />


        <TextView
            android:id="@+id/textView"
            style="@style/TextAppearance.MaterialComponents.Headline2"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_margin="32dp"
            android:layout_marginTop="32dp"
            android:text="@string/instructions"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="32dp"
            android:orientation="vertical"
            android:text="@string/the_only_place_to_find_great_sneakers"
            app:layout_constraintBottom_toTopOf="@+id/get_started_button"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView4">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:text="@string/the_only_place_to_find_great_sneakers">

                <TextView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@drawable/circle"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="1"
                    android:textColor="@color/green_700" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:text="View available shoes ojn the list" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                android:text="@string/the_only_place_to_find_great_sneakers">

                <TextView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@drawable/circle"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="2"
                    android:textColor="@color/green_700" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:text="Select + new shoes to the inventory" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                android:text="@string/the_only_place_to_find_great_sneakers">

                <TextView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@drawable/circle"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="3"
                    android:textColor="@color/green_700" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:text="TextView" />
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>